# RayTal

./: .gitignore  README.md  RayTal.cmake
RayFlux/: Core.h  FileHelper.h  Gui.cpp  Gui.h  Main.cpp  Main.h  ResourceManager.cpp  ResourceManager.h  Settings.cpp  Settings.h  Tools.cpp  Tools.h
RayFlux/docu/: TODO.md
RayTal/: FileHelper.h  Gui.cpp  Gui.h  Main.cpp  Main.h  ResourceManager.h  Settings.cpp  Settings.h  Tools.cpp
demo/: CMakeLists.txt  makeweb.sh
demo/src/: Eyes.h  Lights.h  main.cpp  main_callbacks.cpp  main_class.cpp
moved/RayTal/: Core.h  Gui.cpp  Main.cpp  ResourceManager.cpp  Tools.h  TypeDef.h
moved/demo/: CMakeLists.txt
moved/demo/src/: Lights.h
